fixing vertical whitespace for mobile
added extra vertical whitespace around gallery and content

--- a/css/main.css
+++ b/css/main.css
@@ -143,8 +143,8 @@ margin-top:100px;
 
 .content {
 color: #222;
-padding-top: 10px;
-padding-bottom:80px;
+padding-top: 3em;
+padding-bottom: 6em;
 max-width:980px;
 }
 
